# serializer version: 1
# name: test_publish_ha_discovery[False-elevator-expected_topics0][elevator_publish_payload_switch_wallpad_elevator]
  dict({
    'command_topic': 'homeassistant/switch/wallpad_elevator/set',
    'device': dict({
      'identifiers': 'kocom_wallpad',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom wallpad',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:elevator',
    'name': 'test_name_wallpad_elevator',
    'payload_off': 'off',
    'payload_on': 'on',
    'state_topic': 'homeassistant/switch/wallpad/state',
    'unique_id': 'test_name_wallpad_elevator',
    'value_template': '{{ value_json.elevator }}',
  })
# ---
# name: test_publish_ha_discovery[False-fan-expected_topics2][fan_publish_payload_fan_wallpad_fan]
  dict({
    'command_topic': 'homeassistant/fan/wallpad/mode',
    'device': dict({
      'identifiers': 'kocom_wallpad',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom wallpad',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'name': 'test_name_wallpad_fan',
    'payload_off': 'off',
    'payload_on': 'on',
    'spd_cmd_t': 'homeassistant/fan/wallpad/speed',
    'spd_stat_t': 'homeassistant/fan/wallpad/state',
    'spd_val_tpl': '{{ value_json.speed }}',
    'spds': list([
      'low',
      'medium',
      'high',
      'off',
    ]),
    'state_topic': 'homeassistant/fan/wallpad/state',
    'state_value_template': '{{ value_json.mode }}',
    'unique_id': 'test_name_wallpad_fan',
  })
# ---
# name: test_publish_ha_discovery[False-gas-expected_topics1][gas_publish_payload_sensor_wallpad_gas]
  dict({
    'device': dict({
      'identifiers': 'kocom_wallpad',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom wallpad',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:gas-cylinder',
    'name': 'test_name_wallpad_gas',
    'state_topic': 'homeassistant/sensor/wallpad_gas/state',
    'unique_id': 'test_name_wallpad_gas',
    'value_template': '{{ value_json.gas }}',
  })
# ---
# name: test_publish_ha_discovery[False-gas-expected_topics1][gas_publish_payload_switch_wallpad_gas]
  dict({
    'command_topic': 'homeassistant/switch/wallpad_gas/set',
    'device': dict({
      'identifiers': 'kocom_wallpad',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom wallpad',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:gas-cylinder',
    'name': 'test_name_wallpad_gas',
    'payload_off': 'off',
    'payload_on': 'on',
    'state_topic': 'homeassistant/switch/wallpad_gas/state',
    'unique_id': 'test_name_wallpad_gas',
    'value_template': '{{ value_json.gas }}',
  })
# ---
# name: test_publish_ha_discovery[False-light-expected_topics3][light_publish_payload_light_room1_light0]
  dict({
    'command_topic': 'homeassistant/light/room1_light0/set',
    'device': dict({
      'identifiers': 'kocom_room1',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom room1',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'name': 'test_name_room1_light0',
    'payload_off': 'off',
    'payload_on': 'on',
    'state_topic': 'homeassistant/light/room1/state',
    'unique_id': 'test_name_room1_light0',
    'value_template': '{{ value_json.light0 }}',
  })
# ---
# name: test_publish_ha_discovery[False-light-expected_topics3][light_publish_payload_light_room1_light1]
  dict({
    'command_topic': 'homeassistant/light/room1_light1/set',
    'device': dict({
      'identifiers': 'kocom_room1',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom room1',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'name': 'test_name_room1_light1',
    'payload_off': 'off',
    'payload_on': 'on',
    'state_topic': 'homeassistant/light/room1/state',
    'unique_id': 'test_name_room1_light1',
    'value_template': '{{ value_json.light1 }}',
  })
# ---
# name: test_publish_ha_discovery[False-plug-expected_topics4][plug_publish_payload_switch_room1_plug0]
  dict({
    'command_topic': 'homeassistant/switch/room1_plug0/set',
    'device': dict({
      'identifiers': 'kocom_room1',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom room1',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:power-socket-eu',
    'name': 'test_name_room1_plug0',
    'payload_off': 'off',
    'payload_on': 'on',
    'state_topic': 'homeassistant/switch/room1/state',
    'unique_id': 'test_name_room1_plug0',
    'value_template': '{{ value_json.plug0 }}',
  })
# ---
# name: test_publish_ha_discovery[False-plug-expected_topics4][plug_publish_payload_switch_room1_plug1]
  dict({
    'command_topic': 'homeassistant/switch/room1_plug1/set',
    'device': dict({
      'identifiers': 'kocom_room1',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom room1',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'icon': 'mdi:power-socket-eu',
    'name': 'test_name_room1_plug1',
    'payload_off': 'off',
    'payload_on': 'on',
    'state_topic': 'homeassistant/switch/room1/state',
    'unique_id': 'test_name_room1_plug1',
    'value_template': '{{ value_json.plug1 }}',
  })
# ---
# name: test_publish_ha_discovery[False-thermostat-expected_topics5][thermostat_publish_payload_climate_room1]
  dict({
    'current_temperature_template': '{{ value_json.current_temp }}',
    'current_temperature_topic': 'homeassistant/climate/room1/state',
    'device': dict({
      'identifiers': 'kocom_room1',
      'manufacturer': 'KOCOM',
      'model': 'Wallpad',
      'name': 'kocom room1',
      'sw_version': 'RS485 Compilation 0.1.0',
    }),
    'max_temp': 40,
    'min_temp': 5,
    'mode_command_topic': 'homeassistant/climate/room1/mode',
    'mode_state_template': '{{ value_json.mode }}',
    'mode_state_topic': 'homeassistant/climate/room1/state',
    'modes': list([
      'off',
      'heat',
      'fan_only',
    ]),
    'name': 'test_name_room1_thermostat',
    'temp_step': 1,
    'temperature_command_topic': 'homeassistant/climate/room1/target_temp',
    'temperature_state_template': '{{ value_json.target_temp }}',
    'temperature_state_topic': 'homeassistant/climate/room1/state',
    'unique_id': 'test_name_room1_thermostat',
  })
# ---
# name: test_register_topic_routes[elevator][elevator_registered_topics]
  list([
    'homeassistant/switch/wallpad_elevator/set',
    'homeassistant/switch/wallpad_elevator/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
    'wallpad/bridge/config/scan',
    'wallpad/bridge/config/packet',
    'wallpad/bridge/config/check_sum',
  ])
# ---
# name: test_register_topic_routes[fan][fan_registered_topics]
  list([
    'homeassistant/fan/wallpad/mode',
    'homeassistant/fan/wallpad/speed',
    'homeassistant/fan/wallpad_fan/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
    'wallpad/bridge/config/scan',
    'wallpad/bridge/config/packet',
    'wallpad/bridge/config/check_sum',
  ])
# ---
# name: test_register_topic_routes[gas][gas_registered_topics]
  list([
    'homeassistant/switch/wallpad_gas/set',
    'homeassistant/switch/wallpad_gas/config',
    'homeassistant/sensor/wallpad_gas/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
    'wallpad/bridge/config/scan',
    'wallpad/bridge/config/packet',
    'wallpad/bridge/config/check_sum',
  ])
# ---
# name: test_register_topic_routes[light][light_registered_topics]
  list([
    'homeassistant/light/room1_light0/set',
    'homeassistant/light/room1_light0/config',
    'homeassistant/light/room1_light1/set',
    'homeassistant/light/room1_light1/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
    'wallpad/bridge/config/scan',
    'wallpad/bridge/config/packet',
    'wallpad/bridge/config/check_sum',
  ])
# ---
# name: test_register_topic_routes[plug][plug_registered_topics]
  list([
    'homeassistant/switch/room1_plug0/set',
    'homeassistant/switch/room1_plug0/config',
    'homeassistant/switch/room1_plug1/set',
    'homeassistant/switch/room1_plug1/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
    'wallpad/bridge/config/scan',
    'wallpad/bridge/config/packet',
    'wallpad/bridge/config/check_sum',
  ])
# ---
# name: test_register_topic_routes[thermostat][thermostat_registered_topics]
  list([
    'homeassistant/climate/room1/mode',
    'homeassistant/climate/room1/target_temp',
    'homeassistant/climate/room1/config',
    'wallpad/bridge/config/restart',
    'wallpad/bridge/config/remove',
    'wallpad/bridge/config/scan',
    'wallpad/bridge/config/packet',
    'wallpad/bridge/config/check_sum',
  ])
# ---
